minor fixes to improve readability of html code, removed unnecessary property from css

--- a/src/styles/blocks/product-cards.scss
+++ b/src/styles/blocks/product-cards.scss
@@ -34,7 +34,6 @@
   }
   
   &__reviews {
-    font-weight: 400;
     font-size: 10px;
     color: #060b35;
     line-height: 14px;
